--- a/Projekt/zasoby.qrc
+++ b/Projekt/zasoby.qrc
@@ -1,8 +1,14 @@
 <RCC>
     <qresource prefix="/grapes">
-        <file>foodfruit_122749.ico</file>
         <file>vineyards-shutterstock_1493420213.jpg</file>
         <file>grapes-varieties©iStock.jpg</file>
         <file>2836932.png</file>
+    </qresource>
+    <qresource prefix="/icons">
+        <file>gears-icon.png</file>
+        <file>github-mark.png</file>
+        <file>redo-circle-outline-icon.png</file>
+        <file>round-arrow-left-icon.png</file>
+        <file>round-arrow-right-icon.png</file>
     </qresource>
 </RCC>
