Changes with aspiration

--- a/Projekt/app.ui
+++ b/Projekt/app.ui
@@ -562,7 +562,7 @@ QPushButton:hover {
              <enum>Qt::StrongFocus</enum>
             </property>
             <property name="currentIndex">
-             <number>4</number>
+             <number>2</number>
             </property>
             <widget class="QWidget" name="page">
              <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0,0,0,0">
@@ -702,7 +702,7 @@ QPushButton:pressed {
                  <bool>true</bool>
                 </property>
                 <property name="currentIndex">
-                 <number>0</number>
+                 <number>3</number>
                 </property>
                 <widget class="QWidget" name="ust2">
                  <layout class="QGridLayout" name="gridLayout">
@@ -3146,7 +3146,7 @@ QPushButton:pressed {
                           <number>999999999</number>
                          </property>
                          <property name="value">
-                          <number>50</number>
+                          <number>4000</number>
                          </property>
                         </widget>
                        </item>
@@ -3690,7 +3690,7 @@ margin-left:50%; margin-right:50%;</string>
                         <number>999999999</number>
                        </property>
                        <property name="value">
-                        <number>4000</number>
+                        <number>10</number>
                        </property>
                       </widget>
                      </item>
@@ -5106,7 +5106,7 @@ background-color: rgb(30, 30, 30);</string>
                    <property name="font">
                     <font>
                      <family>Tw Cen MT Condensed</family>
-                     <pointsize>13</pointsize>
+                     <pointsize>14</pointsize>
                     </font>
                    </property>
                    <property name="styleSheet">
@@ -5114,7 +5114,7 @@ background-color: rgb(30, 30, 30);</string>
 background-color: rgb(30, 30, 30);</string>
                    </property>
                    <property name="text">
-                    <string>Rozwiązanie początkowe</string>
+                    <string>Jakość gleby</string>
                    </property>
                    <property name="alignment">
                     <set>Qt::AlignCenter</set>
@@ -5134,7 +5134,7 @@ background-color: rgb(30, 30, 30);</string>
 background-color: rgb(71, 71, 71);</string>
                    </property>
                    <property name="text">
-                    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;---&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Koszt obsiania&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                    </property>
                    <property name="alignment">
                     <set>Qt::AlignCenter</set>
@@ -5221,7 +5221,7 @@ background-color: rgb(30, 30, 30);</string>
 background-color: rgb(71, 71, 71);</string>
                    </property>
                    <property name="text">
-                    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;---&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Ceny wina&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                    </property>
                    <property name="alignment">
                     <set>Qt::AlignCenter</set>
@@ -6301,7 +6301,7 @@ color: rgb(255, 255, 255);
 }</string>
                 </property>
                 <property name="currentIndex">
-                 <number>1</number>
+                 <number>2</number>
                 </property>
                 <widget class="QWidget" name="tab">
                  <attribute name="title">
