--- a/Projekt/app.ui
+++ b/Projekt/app.ui
@@ -3410,8 +3410,92 @@ QPushButton:pressed {
                      <set>Qt::AlignCenter</set>
                     </property>
                     <layout class="QGridLayout" name="gridLayout_25">
+                     <item row="0" column="0">
+                      <widget class="QCheckBox" name="aspi">
+                       <property name="font">
+                        <font>
+                         <family>Tw Cen MT Condensed</family>
+                         <pointsize>14</pointsize>
+                        </font>
+                       </property>
+                       <property name="layoutDirection">
+                        <enum>Qt::LeftToRight</enum>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">color: rgb(255, 255, 255);</string>
+                       </property>
+                       <property name="text">
+                        <string>Czy używamy?</string>
+                       </property>
+                       <property name="checked">
+                        <bool>true</bool>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="2" column="0">
+                      <widget class="QSpinBox" name="aspi_2">
+                       <property name="font">
+                        <font>
+                         <family>Tw Cen MT Condensed</family>
+                         <pointsize>14</pointsize>
+                        </font>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">color: rgb(255, 255, 255);</string>
+                       </property>
+                       <property name="wrapping">
+                        <bool>false</bool>
+                       </property>
+                       <property name="alignment">
+                        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                       </property>
+                       <property name="minimum">
+                        <number>1</number>
+                       </property>
+                       <property name="maximum">
+                        <number>999999999</number>
+                       </property>
+                       <property name="value">
+                        <number>10</number>
+                       </property>
+                      </widget>
+                     </item>
                      <item row="1" column="0">
                       <widget class="QLabel" name="iteracje_3">
+                       <property name="maximumSize">
+                        <size>
+                         <width>16777215</width>
+                         <height>30</height>
+                        </size>
+                       </property>
+                       <property name="font">
+                        <font>
+                         <family>Tw Cen MT Condensed</family>
+                         <pointsize>14</pointsize>
+                        </font>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">color: rgb(255, 255, 255);</string>
+                       </property>
+                       <property name="text">
+                        <string>Liczba spadków:</string>
+                       </property>
+                       <property name="textFormat">
+                        <enum>Qt::AutoText</enum>
+                       </property>
+                       <property name="scaledContents">
+                        <bool>false</bool>
+                       </property>
+                       <property name="alignment">
+                        <set>Qt::AlignCenter</set>
+                       </property>
+                       <property name="buddy">
+                        <cstring>iter</cstring>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="3" column="0">
+                      <widget class="QLabel" name="iteracje_10">
                        <property name="maximumSize">
                         <size>
                          <width>16777215</width>
@@ -3444,8 +3528,8 @@ QPushButton:pressed {
                        </property>
                       </widget>
                      </item>
-                     <item row="2" column="0">
-                      <widget class="QSpinBox" name="aspi_2">
+                     <item row="4" column="0">
+                      <widget class="QSpinBox" name="aspi_3">
                        <property name="font">
                         <font>
                          <family>Tw Cen MT Condensed</family>
@@ -3468,29 +3552,7 @@ QPushButton:pressed {
                         <number>999999999</number>
                        </property>
                        <property name="value">
-                        <number>10</number>
-                       </property>
-                      </widget>
-                     </item>
-                     <item row="0" column="0">
-                      <widget class="QCheckBox" name="aspi">
-                       <property name="font">
-                        <font>
-                         <family>Tw Cen MT Condensed</family>
-                         <pointsize>14</pointsize>
-                        </font>
-                       </property>
-                       <property name="layoutDirection">
-                        <enum>Qt::LeftToRight</enum>
-                       </property>
-                       <property name="styleSheet">
-                        <string notr="true">color: rgb(255, 255, 255);</string>
-                       </property>
-                       <property name="text">
-                        <string>Czy używamy?</string>
-                       </property>
-                       <property name="checked">
-                        <bool>true</bool>
+                        <number>3</number>
                        </property>
                       </widget>
                      </item>
