--- a/Projekt/app.ui
+++ b/Projekt/app.ui
@@ -667,7 +667,7 @@ QPushButton:pressed {
                  <bool>true</bool>
                 </property>
                 <property name="currentIndex">
-                 <number>0</number>
+                 <number>3</number>
                 </property>
                 <widget class="QWidget" name="ust2">
                  <layout class="QGridLayout" name="gridLayout">
@@ -7112,6 +7112,61 @@ background-color: rgb(71, 71, 71);</string>
                  <attribute name="title">
                   <string>Czas wykonania </string>
                  </attribute>
+                 <widget class="QWidget" name="gridLayoutWidget_7">
+                  <property name="geometry">
+                   <rect>
+                    <x>40</x>
+                    <y>160</y>
+                    <width>781</width>
+                    <height>131</height>
+                   </rect>
+                  </property>
+                  <layout class="QGridLayout" name="gridLayout_35">
+                   <item row="0" column="0">
+                    <widget class="QLabel" name="label_75">
+                     <property name="font">
+                      <font>
+                       <family>Tw Cen MT Condensed</family>
+                       <pointsize>14</pointsize>
+                      </font>
+                     </property>
+                     <property name="styleSheet">
+                      <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(30, 30, 30);</string>
+                     </property>
+                     <property name="text">
+                      <string>Ogólny czas wykonania</string>
+                     </property>
+                     <property name="alignment">
+                      <set>Qt::AlignCenter</set>
+                     </property>
+                     <property name="wordWrap">
+                      <bool>true</bool>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="0" column="1">
+                    <widget class="QLabel" name="stat_33">
+                     <property name="font">
+                      <font>
+                       <family>Tw Cen MT Condensed</family>
+                       <pointsize>14</pointsize>
+                      </font>
+                     </property>
+                     <property name="styleSheet">
+                      <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(71, 71, 71);</string>
+                     </property>
+                     <property name="text">
+                      <string>---</string>
+                     </property>
+                     <property name="alignment">
+                      <set>Qt::AlignCenter</set>
+                     </property>
+                    </widget>
+                   </item>
+                  </layout>
+                 </widget>
                 </widget>
                 <widget class="QWidget" name="tab_5">
                  <attribute name="title">
@@ -7427,8 +7482,8 @@ background-color: rgb(30, 30, 30);</string>
                  <widget class="QLabel" name="test_icon_2">
                   <property name="geometry">
                    <rect>
-                    <x>820</x>
-                    <y>420</y>
+                    <x>800</x>
+                    <y>400</y>
                     <width>68</width>
                     <height>71</height>
                    </rect>
